# samothraki-june-2026

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  deploy.md
.github/workflows/: deploy.yml
assets/: main.css  photo_data.json  photo_tags.json  photos_no_gps.json
photo-extract/: Cargo.toml
photo-extract/src/: lib.rs  main.rs
scripts/: publish.sh  setup.sh  transcode_videos.sh  write_exif_gps.py
src/: config.rs  main.rs  server_fns.rs
src/app/: canvas.rs  mod.rs
src/data/: mod.rs  photos.rs  source.rs
src/maplibre/: bindings.rs  helpers.rs
src/maplibre/manager/: controls.rs  lifecycle.rs  mod.rs
src/utils/: geojson.rs  log.rs
