[workspace]
members = ["photo-extract"]
resolver = "2"

[package]
name = "my-holiday"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "=0.7.3", features = [] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["fs"], optional = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", default-features = false, features = [
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlScriptElement",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dioxus/fullstack", "dep:tokio"]
fullstack = ["dioxus/fullstack"]
