[workspace]
members = ["photo-extract"]
resolver = "2"

[package]
name = "my-holiday"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "=0.7.9", features = [] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["fs"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", default-features = false, features = [
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlScriptElement",
  "KeyboardEvent",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
] }

[features]
default = ["web"]
# The client half of the fullstack app is built by `dx` with `features = ["web"]`.
# It must pull in `dioxus/fullstack` so `#[server]` fns compile to client RPC stubs
# and the `#[cfg(feature = "fullstack")]` gates match the server build.
web = ["dioxus/web", "fullstack"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dep:tokio", "dep:tower-http", "fullstack"]
fullstack = ["dioxus/fullstack"]
