[workspace]
members = ["photo-extract"]
resolver = "2"

[package]
name = "my-holiday"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "=0.7.9", features = [] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["fs"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", default-features = false, features = [
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlScriptElement",
  "KeyboardEvent",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
] }

[features]
default = ["web"]

# VIEWER (deployed, fully static). Pure `dioxus/web` with NO fullstack: the
# shipped WASM contains no `#[server]` machinery, no RPC stubs. All photo data
# comes from `manifest.json` fetched at runtime; images load from ASSET_BASE_URL.
web = ["dioxus/web"]

# EDITOR (local only). Additive layer on top of the `web` renderer: it pulls in
# `dioxus/fullstack` (so `#[server]` fns compile to client RPC stubs and the
# `#[cfg(feature = "fullstack")]` gates match the server build) but does NOT
# enable `dioxus/web` itself. That's deliberate: dx auto-activates every feature
# that transitively enables the web renderer, so if `editor` enabled `dioxus/web`
# a plain `dx build` (viewer) would drag fullstack in too. dx adds the `web`
# renderer for the client automatically; invoke via `dx serve --features editor`.
# Never deployed.
editor = ["fullstack"]

# Native server half of the editor's fullstack build (dx enables this for the
# server binary). Reads/writes metadata and serves photos from local disk.
server = ["dioxus/server", "dep:tokio", "dep:tower-http", "fullstack"]

# Desktop: local disk access like the editor.
desktop = ["dioxus/desktop", "fullstack"]

fullstack = ["dioxus/fullstack"]
